--- a/format_PCA_forgwas.ipynb
+++ b/format_PCA_forgwas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "45e7a3c2-ab9e-4c01-8dc0-c6ce5472428c",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "cea12006-8678-45b5-8f62-bbf77e010a61",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "9a7680f3-a0f7-4fa0-ae70-42dd06c84408",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "'/tscc/projects/ps-palmer/brittany/SUD_cross_species'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "id": "c7aa8b15-39ae-43ce-b9eb-5a6541ba0996",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "id": "529bc2c5-e892-43da-938f-160c630e7e0c",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "id": "93c24d95-b44d-43c2-89af-5fa0b2d18bf9",
    "metadata": {},
    "outputs": [],
@@ -82,28 +82,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "id": "db81706d-fc61-4f56-a59e-ed98df339f95",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['rfid', 'nicsa_day1_activelick', 'nicsa_day1_inactivelick',\n",
-       "       'nicsa_day1_infusion', 'nicsa_day2_activelick',\n",
-       "       'nicsa_day2_inactivelick', 'nicsa_day2_infusion',\n",
-       "       'nicsa_day3_activelick', 'nicsa_day3_inactivelick',\n",
-       "       'nicsa_day3_infusion',\n",
+       "Index(['Unnamed: 0', 'rfid', 'nicsa_day1_activelick',\n",
+       "       'nicsa_day1_inactivelick', 'nicsa_day1_infusion',\n",
+       "       'nicsa_day2_activelick', 'nicsa_day2_inactivelick',\n",
+       "       'nicsa_day2_infusion', 'nicsa_day3_activelick',\n",
+       "       'nicsa_day3_inactivelick',\n",
        "       ...\n",
-       "       'raw_nicsa_day10_inactivelick', 'raw_nicsa_day10_infusion',\n",
-       "       'raw_nicsa_day11_activelick', 'raw_nicsa_day11_inactivelick',\n",
        "       'raw_nicsa_day11_infusion', 'raw_nicsa_day20_activelick',\n",
        "       'raw_nicsa_day20_inactivelick', 'raw_nicsa_day20_infusion',\n",
-       "       'raw_nicsa_slope_nicotine_infusion', 'coatcolor'],\n",
-       "      dtype='object', length=107)"
+       "       'raw_nicsa_slope_nicotine_infusion', 'coatcolor', 'cigday_PC1',\n",
+       "       'cigday_PC1_no_covariate', 'smkinit_PC1', 'smkinit_PC1_no_covariate'],\n",
+       "      dtype='object', length=112)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "ae32faf3-239e-48aa-9ed5-706d9ab2050d",
    "metadata": {},
    "outputs": [],
