--- a/loco_network_prop.ipynb
+++ b/loco_network_prop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "78703c20-19b8-4619-8ffd-52d265b7a9d8",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "58efd9dd-898e-4d00-90d6-59e5af05da50",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "b04def16-2377-4f94-be32-e92e66b0dc33",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "5f541903-81d7-42a5-8387-85a2f0aac129",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 18,
    "id": "6b5aa207-0f4e-4030-8881-81abcb527391",
    "metadata": {},
    "outputs": [],
@@ -60,12 +60,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "id": "5784e661-4360-43e3-bfb3-014f7ab7b2a5",
    "metadata": {},
    "outputs": [],
    "source": [
     "save_file=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2c6129d4-32fa-4954-80fe-5dcf55b0e753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "UUIDs={\n",
+    "    'PCNet2.0':'d73d6357-e87b-11ee-9621-005056ae23aa',\n",
+    "    'PCNet2.1':'e9c574f4-e87a-11ee-9621-005056ae23aa',\n",
+    "    'PCNet2.2':'8b4b54fa-e87d-11ee-9621-005056ae23aa'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e400156-6ded-4956-8b70-74b0dc6af01b",
+   "metadata": {},
+   "source": [
+    "# functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ed70953c-8e95-439b-aa8e-261d75e1ed21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def import_seedgenes(path,pcol='P',gene_col='GENE NAME',delim='comma', cutoff=None):\n",
+    "    if delim=='comma':\n",
+    "        df=pd.read_csv(path,sep=',')\n",
+    "    else:\n",
+    "        df=pd.read_csv(path,sep='\\t')\n",
+    "    if pcol==None:\n",
+    "        print('pvalue column not specified- all genes will be used')\n",
+    "        cutoff=None\n",
+    "    if cutoff=='bonferroni':\n",
+    "        df=df[df[pcol]<0.05/len(df)]\n",
+    "    elif cutoff=='FDR_05':\n",
+    "        df=df[df[pcol]<0.05]\n",
+    "    else:\n",
+    "        print('cutoff not defined/custom- using all genes ')\n",
+    "        df=df\n",
+    "    print(df.head())\n",
+    "    return(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1eed56ce-25f1-4ca4-a3bf-bda7a5f6d86b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def import_interactome(interactome_name=None, UUIDs=UUIDs,ndex_user=None, ndex_password=None,UUID=None):\n",
+    "    \"\"\"\n",
+    "    Imports a gene interactome from the NDEx database and returns it as a NetworkX graph object. Optionally,\n",
+    "    the function allows for importing using a unique identifier (UUID) or by an interactome name.\n",
+    "\n",
+    "    The function checks if the interactome name provided corresponds to a predefined dictionary of UUIDs. If it does, it\n",
+    "    retrieves the network using the specified credentials. If an interactome name is not provided but a UUID is,\n",
+    "    it retrieves the network using the provided UUID. The nodes of pcnet_v14 are relabelled by their gene name rather than ID number.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - interactome_name (str, optional): The name of the interactome as defined in the UUIDs dictionary. If not provided\n",
+    "      but a UUID is, the interactome associated with the UUID is imported instead.\n",
+    "    - ndex_user (str, optional): The NDEx account username for accessing private networks.\n",
+    "    - ndex_password (str, optional): The NDEx account password for accessing private networks.\n",
+    "    - UUID (str, optional): A specific UUID to directly download an interactome from NDEx if the interactome name is not used.\n",
+    "\n",
+    "    Returns:\n",
+    "    networkx.Graph: A graph object representing the interactome. Nodes and edges represent genes and their interactions, respectively.\n",
+    "\n",
+    "    Notes:\n",
+    "    - The function uses the NDEx2 Python client and requires Internet access to NDEx's servers.\n",
+    "    - Depending on the access rights of the NDEx account, private or public interactomes can be retrieved.\n",
+    "    - The function prints the number of nodes and edges of the imported graph for diagnostic purposes.\n",
+    "\n",
+    "    Raises:\n",
+    "    - ValueError: If neither an interactome name nor a UUID is provided.\n",
+    "    \"\"\"    \n",
+    "    interactome_uuid=UUIDs[interactome_name]\n",
+    "    print(interactome_name)\n",
+    "    ndex_server='public.ndexbio.org'\n",
+    "    #import network based on provided interactome key\n",
+    "    if (interactome_name in UUIDs.keys()):\n",
+    "        graph = ndex2.create_nice_cx_from_server(\n",
+    "                    ndex_server, \n",
+    "                    username=ndex_user, \n",
+    "                    password=ndex_password, \n",
+    "                    uuid=interactome_uuid\n",
+    "                ).to_networkx()\n",
+    "        if (interactome_name=='pcnet_v14'):\n",
+    "            graph=nx.relabel_nodes(graph, nx.get_node_attributes(graph, 'HGNC Symbol'))\n",
+    "        # print out interactome num nodes and edges for diagnostic purposes\n",
+    "        print('number of nodes:')\n",
+    "        print(len(graph.nodes))\n",
+    "        print('\\nnumber of edges:')\n",
+    "        print(len(graph.edges))\n",
+    "        return(graph)\n",
+    "    elif(interactome_name==None & UUID!=None):\n",
+    "        print('using novel UUID. For UUIDs used in this study, see UUID_dict')\n",
+    "        graph = ndex2.create_nice_cx_from_server(\n",
+    "            ndex_server, \n",
+    "            username=ndex_user, \n",
+    "            password=ndex_password, \n",
+    "            uuid=UUID\n",
+    "        ).to_networkx()\n",
+    "        # print out interactome num nodes and edges for diagnostic purposes\n",
+    "        print('number of nodes:')\n",
+    "        print(len(graph.nodes))\n",
+    "        print('\\nnumber of edges:')\n",
+    "        print(len(graph.edges))\n",
+    "        return(graph)\n",
+    "    else:\n",
+    "        print('UUID/interactome name not provided- please provide either to import interactome.')"
    ]
   },
   {
@@ -90,31 +209,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "2c6129d4-32fa-4954-80fe-5dcf55b0e753",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "UUIDs={\n",
-    "    'PCNet2.0':'d73d6357-e87b-11ee-9621-005056ae23aa',\n",
-    "    'PCNet2.1':'e9c574f4-e87a-11ee-9621-005056ae23aa',\n",
-    "    'PCNet2.2':'8b4b54fa-e87d-11ee-9621-005056ae23aa'\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 46,
    "id": "30bb2a69-0c5e-40e2-99a6-ce8705f4d5c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "interactome_name='PCNet2.2'"
+    "interactome_name='PCNet2.0'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 47,
    "id": "16d7e91b-af6f-4c2f-abdd-9f1c11139d21",
    "metadata": {},
    "outputs": [
@@ -122,12 +227,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PCNet2.2\n",
+      "PCNet2.0\n",
       "number of nodes:\n",
-      "18558\n",
+      "19267\n",
       "\n",
       "number of edges:\n",
-      "3323928\n"
+      "3852119\n"
      ]
     }
    ],
@@ -137,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 48,
    "id": "b30e9308-92d7-4980-973e-b3280f13710f",
    "metadata": {},
    "outputs": [],
@@ -147,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 49,
    "id": "0ff6358b-83c2-4f7c-8470-a10aeb4a0c35",
    "metadata": {},
    "outputs": [
@@ -181,28 +286,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "d68382ef-b8b2-43b7-a8dc-5631c254bc35",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/tscc/projects/ps-palmer/brittany/SUD_cross_species'"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "id": "4c5d0e2e-7c9a-4d01-a2d6-48ccf9e3aa1d",
    "metadata": {},
    "outputs": [],
@@ -210,13 +304,14 @@
     "mag_dir='magma/seed_genes/'\n",
     "file_dict={\n",
     "    'loco':mag_dir+'loco_win10_annot.tsv',\n",
-    "    'ext':mag_dir+'ext_munged_annot.tsv'\n",
+    "    'ext_munged':mag_dir+'ext_munged_annot.tsv',\n",
+    "    'ext':mag_dir+'ext_orig_annot.tsv',\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 42,
    "id": "75db8874-dfb9-4508-a9e9-597c802af13c",
    "metadata": {},
    "outputs": [],
@@ -226,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 37,
    "id": "d3a288b1-d847-4adb-8120-5a18019b8ceb",
    "metadata": {},
    "outputs": [],
@@ -239,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 43,
    "id": "5c4ea0bc-e5cf-4099-9e91-067ef20b2cf3",
    "metadata": {},
    "outputs": [],
@@ -252,17 +347,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 33,
+   "id": "28637f4b-a485-4eb2-b1d2-e464a321b68c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1106"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(seed_dict['ext_bonf'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "0039cbaf-c2da-43f1-8301-f283cd08645c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.756339581036384e-06"
+       "2.7003672499459928e-06"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,17 +389,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 35,
    "id": "dc747248-4699-4afe-a4bd-b2fd38abe7a2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.012878"
+       "0.013663"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 38,
    "id": "6cd81490-a43b-4cab-97e7-0f0828be30b2",
    "metadata": {},
    "outputs": [
@@ -304,7 +420,7 @@
        "0.0011128"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,108 +550,103 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3efe8172-27ee-4491-a9b3-c851653b7713",
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "41effdd2-67c3-4e29-9a7e-06e12c3e9bbc",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['ext_FDR', 'ext_bonf'])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# functions"
+    "seed_dict.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "ed70953c-8e95-439b-aa8e-261d75e1ed21",
+   "execution_count": 50,
+   "id": "0ce7dac1-9d85-40e5-ae1f-d3ff6e2b3421",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3653a6779689435292b25db998d405f9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TGFBR1     2.067707\n",
+      "TGFBR2    15.277399\n",
+      "SMAD3      1.916033\n",
+      "TGFB1      0.269054\n",
+      "SMAD2      0.041850\n",
+      "dtype: float64\n",
+      "network_scores/ext_FDR_PCNet2.0_zscore.tsv\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1e69de3705924333a6df3c464b7af6fd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TGFBR1   -1.153594\n",
+      "TGFBR2    0.966705\n",
+      "SMAD3    -0.245730\n",
+      "TGFB1     0.524767\n",
+      "SMAD2    -0.950918\n",
+      "dtype: float64\n",
+      "network_scores/ext_bonf_PCNet2.0_zscore.tsv\n"
+     ]
+    }
+   ],
    "source": [
-    "def import_seedgenes(path,pcol='P',gene_col='GENE NAME',delim='comma', cutoff=None):\n",
-    "    if delim=='comma':\n",
-    "        df=pd.read_csv(path,sep=',')\n",
-    "    else:\n",
-    "        df=pd.read_csv(path,sep='\\t')\n",
-    "    if pcol==None:\n",
-    "        print('pvalue column not specified- all genes will be used')\n",
-    "        cutoff=None\n",
-    "    if cutoff=='bonferroni':\n",
-    "        df=df[df[pcol]<0.05/len(df)]\n",
-    "    elif cutoff=='FDR_05':\n",
-    "        df=df[df[pcol]<0.05]\n",
-    "    else:\n",
-    "        print('cutoff not defined/custom- using all genes ')\n",
-    "        df=df\n",
-    "    print(df.head())\n",
-    "    return(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "1eed56ce-25f1-4ca4-a3bf-bda7a5f6d86b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def import_interactome(interactome_name=None, UUIDs=UUIDs,ndex_user=None, ndex_password=None,UUID=None):\n",
-    "    \"\"\"\n",
-    "    Imports a gene interactome from the NDEx database and returns it as a NetworkX graph object. Optionally,\n",
-    "    the function allows for importing using a unique identifier (UUID) or by an interactome name.\n",
-    "\n",
-    "    The function checks if the interactome name provided corresponds to a predefined dictionary of UUIDs. If it does, it\n",
-    "    retrieves the network using the specified credentials. If an interactome name is not provided but a UUID is,\n",
-    "    it retrieves the network using the provided UUID. The nodes of pcnet_v14 are relabelled by their gene name rather than ID number.\n",
-    "\n",
-    "    Parameters:\n",
-    "    - interactome_name (str, optional): The name of the interactome as defined in the UUIDs dictionary. If not provided\n",
-    "      but a UUID is, the interactome associated with the UUID is imported instead.\n",
-    "    - ndex_user (str, optional): The NDEx account username for accessing private networks.\n",
-    "    - ndex_password (str, optional): The NDEx account password for accessing private networks.\n",
-    "    - UUID (str, optional): A specific UUID to directly download an interactome from NDEx if the interactome name is not used.\n",
-    "\n",
-    "    Returns:\n",
-    "    networkx.Graph: A graph object representing the interactome. Nodes and edges represent genes and their interactions, respectively.\n",
-    "\n",
-    "    Notes:\n",
-    "    - The function uses the NDEx2 Python client and requires Internet access to NDEx's servers.\n",
-    "    - Depending on the access rights of the NDEx account, private or public interactomes can be retrieved.\n",
-    "    - The function prints the number of nodes and edges of the imported graph for diagnostic purposes.\n",
-    "\n",
-    "    Raises:\n",
-    "    - ValueError: If neither an interactome name nor a UUID is provided.\n",
-    "    \"\"\"    \n",
-    "    interactome_uuid=UUIDs[interactome_name]\n",
-    "    print(interactome_name)\n",
-    "    ndex_server='public.ndexbio.org'\n",
-    "    #import network based on provided interactome key\n",
-    "    if (interactome_name in UUIDs.keys()):\n",
-    "        graph = ndex2.create_nice_cx_from_server(\n",
-    "                    ndex_server, \n",
-    "                    username=ndex_user, \n",
-    "                    password=ndex_password, \n",
-    "                    uuid=interactome_uuid\n",
-    "                ).to_networkx()\n",
-    "        if (interactome_name=='pcnet_v14'):\n",
-    "            graph=nx.relabel_nodes(graph, nx.get_node_attributes(graph, 'HGNC Symbol'))\n",
-    "        # print out interactome num nodes and edges for diagnostic purposes\n",
-    "        print('number of nodes:')\n",
-    "        print(len(graph.nodes))\n",
-    "        print('\\nnumber of edges:')\n",
-    "        print(len(graph.edges))\n",
-    "        return(graph)\n",
-    "    elif(interactome_name==None & UUID!=None):\n",
-    "        print('using novel UUID. For UUIDs used in this study, see UUID_dict')\n",
-    "        graph = ndex2.create_nice_cx_from_server(\n",
-    "            ndex_server, \n",
-    "            username=ndex_user, \n",
-    "            password=ndex_password, \n",
-    "            uuid=UUID\n",
-    "        ).to_networkx()\n",
-    "        # print out interactome num nodes and edges for diagnostic purposes\n",
-    "        print('number of nodes:')\n",
-    "        print(len(graph.nodes))\n",
-    "        print('\\nnumber of edges:')\n",
-    "        print(len(graph.edges))\n",
-    "        return(graph)\n",
-    "    else:\n",
-    "        print('UUID/interactome name not provided- please provide either to import interactome.')"
+    "#filter for only genes in the interactome\n",
+    "for k in list(seed_dict.keys()):  \n",
+    "    seed_genes = list(seed_dict[k].intersection(graph.nodes()))\n",
+    "    \n",
+    "    NPSc, Fnew_score, Fnew_rand_score = netprop_zscore.calculate_heat_zscores(\n",
+    "        w_double_prime,  \n",
+    "        list(graph.nodes()),\n",
+    "        dict(graph.degree), \n",
+    "        seed_genes, num_reps=1000,\n",
+    "        minimum_bin_size=100,\n",
+    "        random_seed=random_seed)\n",
+    "    print(NPSc.head())\n",
+    "    if save_file:\n",
+    "        print(('network_scores/'+k+'_'+interactome_name+'_zscore.tsv'))\n",
+    "        NPSc.to_csv('network_scores/'+k+'_'+interactome_name+'_zscore.tsv',sep='\\t',header=False)"
    ]
   }
  ],
