--- a/run_magma_human.ipynb
+++ b/run_magma_human.ipynb
@@ -38,6 +38,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3f43eec-38fb-4a17-b210-8f70b255fff5",
+   "metadata": {},
+   "source": [
+    "used munged originally, Sandra says to use original"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "ad2e5788-f0d6-4267-8e25-b9179e0df121",
@@ -840,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "2173d57f-bcbf-4452-9438-b921f47d2686",
    "metadata": {},
    "outputs": [],
@@ -926,14 +934,6 @@
     "/tscc/projects/ps-palmer/brittany/magma_v1/magma --bfile $bfile_loc --pval \"${dir}${prefix}_pval.tsv\" ncol=N --gene-annot \"${dir}${prefix}${suffix}.genes.annot\" --out $dir$prefix$suffix\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6669c583-fa2b-4182-b4a3-bacd05af8534",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
