--- a/loco_network_prop.ipynb
+++ b/loco_network_prop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "78703c20-19b8-4619-8ffd-52d265b7a9d8",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "58efd9dd-898e-4d00-90d6-59e5af05da50",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "b04def16-2377-4f94-be32-e92e66b0dc33",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "5f541903-81d7-42a5-8387-85a2f0aac129",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "6b5aa207-0f4e-4030-8881-81abcb527391",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "5784e661-4360-43e3-bfb3-014f7ab7b2a5",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "2c6129d4-32fa-4954-80fe-5dcf55b0e753",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "ed70953c-8e95-439b-aa8e-261d75e1ed21",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "1eed56ce-25f1-4ca4-a3bf-bda7a5f6d86b",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "30bb2a69-0c5e-40e2-99a6-ce8705f4d5c2",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "16d7e91b-af6f-4c2f-abdd-9f1c11139d21",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "b30e9308-92d7-4980-973e-b3280f13710f",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "id": "0ff6358b-83c2-4f7c-8470-a10aeb4a0c35",
    "metadata": {},
    "outputs": [
@@ -286,17 +286,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d68382ef-b8b2-43b7-a8dc-5631c254bc35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/tscc/projects/ps-palmer/brittany/SUD_cross_species'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "4c5d0e2e-7c9a-4d01-a2d6-48ccf9e3aa1d",
    "metadata": {},
    "outputs": [],
@@ -306,12 +317,13 @@
     "    'loco':mag_dir+'loco_win10_annot.tsv',\n",
     "    'ext_munged':mag_dir+'ext_munged_annot.tsv',\n",
     "    'ext':mag_dir+'ext_orig_annot.tsv',\n",
+    "    'ext_st22':mag_dir+'all_tests_ext1_st22_genes.csv'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "id": "75db8874-dfb9-4508-a9e9-597c802af13c",
    "metadata": {},
    "outputs": [],
@@ -347,23 +359,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "28637f4b-a485-4eb2-b1d2-e464a321b68c",
+   "execution_count": 18,
+   "id": "49fc4fb0-adc7-4618-85db-fcf131a3f1d9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1106"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(seed_dict['ext_bonf'])"
+    "ext_st22=pd.read_csv(file_dict['ext_st22'],sep='\\t')\n",
+    "seed_dict['ext_st22']=(set(ext_st22['GENE NAME']))"
    ]
   },
   {
@@ -431,14 +433,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "69c84427-6eaa-4722-bf63-2741304ec90b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ea6c611014c43dfa049ec2177ff1299",
+       "model_id": "e52c7a200a7940d899da40da71b675a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -453,187 +455,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A2M     -0.147537\n",
-      "APP     -0.698752\n",
-      "LRP1    -0.813702\n",
-      "APOA1    0.059797\n",
-      "HP      -0.317383\n",
+      "TGFBR1    1.514399\n",
+      "TGFBR2   -0.547055\n",
+      "SMAD3    -0.572345\n",
+      "TGFB1    -0.761487\n",
+      "SMAD2    -0.347693\n",
       "dtype: float64\n",
-      "network_scores/loco_FDR_PCNet2.2_zscore.tsv\n"
+      "network_scores/ext_st22_PCNet2.0_zscore.tsv\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "350b2e073e2747d48939b94887c803e1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A2M      0.936617\n",
-      "APP     -0.661458\n",
-      "LRP1    -0.209935\n",
-      "APOA1    1.417920\n",
-      "HP       2.490609\n",
-      "dtype: float64\n",
-      "network_scores/loco_bonf_PCNet2.2_zscore.tsv\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dce801d1320f49efa5b2e7d77ec0b0bd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A2M      10.431915\n",
-      "APP       0.122851\n",
-      "LRP1      0.276334\n",
-      "APOA1    -0.335786\n",
-      "HP       14.015638\n",
-      "dtype: float64\n",
-      "network_scores/ext_FDR_PCNet2.2_zscore.tsv\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20db7b5123af43e1bf31ad304f38d472",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "#filter for only genes in the interactome\n",
     "for k in seed_dict.keys():  \n",
-    "    seed_genes = list(seed_dict[k].intersection(graph.nodes()))\n",
-    "    \n",
-    "    NPSc, Fnew_score, Fnew_rand_score = netprop_zscore.calculate_heat_zscores(\n",
-    "        w_double_prime,  \n",
-    "        list(graph.nodes()),\n",
-    "        dict(graph.degree), \n",
-    "        seed_genes, num_reps=1000,\n",
-    "        minimum_bin_size=100,\n",
-    "        random_seed=random_seed)\n",
-    "    print(NPSc.head())\n",
-    "    if save_file:\n",
-    "        print(('network_scores/'+k+'_'+interactome_name+'_zscore.tsv'))\n",
-    "        NPSc.to_csv('network_scores/'+k+'_'+interactome_name+'_zscore.tsv',sep='\\t',header=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "41effdd2-67c3-4e29-9a7e-06e12c3e9bbc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['ext_FDR', 'ext_bonf'])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "seed_dict.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "0ce7dac1-9d85-40e5-ae1f-d3ff6e2b3421",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3653a6779689435292b25db998d405f9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TGFBR1     2.067707\n",
-      "TGFBR2    15.277399\n",
-      "SMAD3      1.916033\n",
-      "TGFB1      0.269054\n",
-      "SMAD2      0.041850\n",
-      "dtype: float64\n",
-      "network_scores/ext_FDR_PCNet2.0_zscore.tsv\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e69de3705924333a6df3c464b7af6fd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TGFBR1   -1.153594\n",
-      "TGFBR2    0.966705\n",
-      "SMAD3    -0.245730\n",
-      "TGFB1     0.524767\n",
-      "SMAD2    -0.950918\n",
-      "dtype: float64\n",
-      "network_scores/ext_bonf_PCNet2.0_zscore.tsv\n"
-     ]
-    }
-   ],
-   "source": [
-    "#filter for only genes in the interactome\n",
-    "for k in list(seed_dict.keys()):  \n",
     "    seed_genes = list(seed_dict[k].intersection(graph.nodes()))\n",
     "    \n",
     "    NPSc, Fnew_score, Fnew_rand_score = netprop_zscore.calculate_heat_zscores(\n",
