--- a/loco_network_prop.ipynb
+++ b/loco_network_prop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "78703c20-19b8-4619-8ffd-52d265b7a9d8",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "58efd9dd-898e-4d00-90d6-59e5af05da50",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b04def16-2377-4f94-be32-e92e66b0dc33",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "5f541903-81d7-42a5-8387-85a2f0aac129",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "6b5aa207-0f4e-4030-8881-81abcb527391",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "5784e661-4360-43e3-bfb3-014f7ab7b2a5",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "2c6129d4-32fa-4954-80fe-5dcf55b0e753",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "ed70953c-8e95-439b-aa8e-261d75e1ed21",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "1eed56ce-25f1-4ca4-a3bf-bda7a5f6d86b",
    "metadata": {},
    "outputs": [],
@@ -188,6 +188,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "41444419-4fba-4786-b74e-278d97cf9279",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from rat bmi notebooks not netcoloc\n",
+    "def calculate_heat_zscores_with_sampling(data, nodes, individual_heats, G_PC, trait=\"BMI\", max_genes=500, num_samples=100,\n",
+    "                                        nominal_sig=0.05, num_reps=1000, out_path=\"\", minimum_bin_size=10,outfile='sample.tsv'):\n",
+    "    \"\"\"Takes a set of summary statistics and a molecular interaction and performs sampling of the significant genes.\n",
+    "    For each sample a random selection of seed genes is chosen, weighted by the p-value of each gene in the summary\n",
+    "    statistics. Network propagation with zscore calculation is performed for each sample to generate a distribution\n",
+    "    of z-scores for each gene in the seed_gene set.\n",
+    "\n",
+    "    Args:\n",
+    "        data (pd.DataFrame): Gene level summary statistics\n",
+    "        nodes (list): list of nodes in the interaction network\n",
+    "        individual_heats (np.array): Heat matrix calculated by `netprop_zscore.get_individual_heats_matrix()`\n",
+    "        G_PC (nx.Graph): molecular interaction network\n",
+    "        trait (str, optional): name of trait being investigated. Defaults to \"BMI\".\n",
+    "        max_genes (int, optional): Maximum number of seed genes to include in each sample (maximum=500). Defaults to 500.\n",
+    "        num_samples (int, optional): Number of times to perform sampling. Defaults to 100.\n",
+    "        nominal_sig (float, optional): Significance cutoff for keeping genes in data (Note: this value will be Bonferroni corrected). Defaults to 0.05.\n",
+    "        num_reps (int, optional): Number of repetitions of randomization for generating null distribution for z_scores. Defaults to 1000.\n",
+    "        out_path (str, optional): File path prefix for saving results of sampling. Defaults to \"\".\n",
+    "        minimum_bin_size (int, optional): minimum number of genes that should be in each degree matching bin. Defaults to 10.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: Gene x sampling run dataframe of sampled z-scores\n",
+    "    \"\"\"\n",
+    "    assert max_genes <= 500, \"NetColoc is only valid for sets of 500 or less genes so maximum number of genes for sampling must be <= 500\"\n",
+    "    #outfile = out_path + trait + \"sampling_\" + str(max_genes) + \"_\" + str(num_samples) + \".tsv\"\n",
+    "    data = data.loc[data.gene_symbol.isin(nodes)]  # subset to genes in interaction network\n",
+    "    all_seeds = data.loc[data.pvalue <= nominal_sig / len(data)]  # Bonferroni correction\n",
+    "    all_seeds = all_seeds.assign(log10p=-1 * np.log10(all_seeds.pvalue))  # get -log10p for weighted sampling\n",
+    "    sampling_results = []\n",
+    "    for i in tqdm(range(num_samples)):\n",
+    "        # perform propagation for sample\n",
+    "        sample_seeds = random.choices(population=all_seeds.gene_symbol.values, weights=all_seeds.log10p.values, k=max_genes)\n",
+    "        sample_results = netprop_zscore.calculate_heat_zscores(individual_heats, nodes=list(G_PC.nodes), degrees=dict(G_PC.degree),\n",
+    "                                                seed_genes=sample_seeds, num_reps=num_reps,\n",
+    "                                                minimum_bin_size=minimum_bin_size, random_seed=i)[0]\n",
+    "        sample_z = pd.DataFrame(sample_results, columns=[\"z\" + str(i)])\n",
+    "        # save running results of sampling\n",
+    "        if i == 0:\n",
+    "            sample_z.to_csv(outfile, sep=\"\\t\")\n",
+    "        else:\n",
+    "            existing = pd.read_csv(outfile, sep=\"\\t\", index_col=0)\n",
+    "            existing = existing.join(sample_z)\n",
+    "            existing.to_csv(outfile, sep=\"\\t\")\n",
+    "        sampling_results.append(sample_z)\n",
+    "    return pd.concat(sampling_results, axis=1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f592e945-cccb-41fe-9a6b-0c00ad8031e4",
    "metadata": {},
@@ -209,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "30bb2a69-0c5e-40e2-99a6-ce8705f4d5c2",
    "metadata": {},
    "outputs": [],
@@ -219,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "16d7e91b-af6f-4c2f-abdd-9f1c11139d21",
    "metadata": {},
    "outputs": [
@@ -242,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "b30e9308-92d7-4980-973e-b3280f13710f",
    "metadata": {},
    "outputs": [],
@@ -252,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "0ff6358b-83c2-4f7c-8470-a10aeb4a0c35",
    "metadata": {},
    "outputs": [
@@ -286,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "d68382ef-b8b2-43b7-a8dc-5631c254bc35",
    "metadata": {},
    "outputs": [
@@ -296,7 +351,7 @@
        "'/tscc/projects/ps-palmer/brittany/SUD_cross_species'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "4c5d0e2e-7c9a-4d01-a2d6-48ccf9e3aa1d",
    "metadata": {},
    "outputs": [],
@@ -323,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "75db8874-dfb9-4508-a9e9-597c802af13c",
    "metadata": {},
    "outputs": [],
@@ -333,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "d3a288b1-d847-4adb-8120-5a18019b8ceb",
    "metadata": {},
    "outputs": [],
@@ -346,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "5c4ea0bc-e5cf-4099-9e91-067ef20b2cf3",
    "metadata": {},
    "outputs": [],
@@ -354,81 +409,42 @@
     "ext=pd.read_csv(file_dict['ext'],sep='\\t')\n",
     "ext_bonf_cut=0.05/len(ext) # no ortholog adding, so can calculate from this table\n",
     "seed_dict['ext_FDR']=(set(ext[ext['Q']<0.05]['GENE']))\n",
-    "seed_dict['ext_bonf']=(set(ext[ext['P']<ext_bonf_cut]['GENE']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "49fc4fb0-adc7-4618-85db-fcf131a3f1d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "seed_dict['ext_bonf']=(set(ext[ext['P']<ext_bonf_cut]['GENE']))\n",
+    "seed_dict['ext_top500']=set(ext[(ext['GENE'].isin(all_nodes))].nsmallest(500,'P')['GENE'])\n",
+    "#the genes from ext1.0 supplemental table 22\n",
     "ext_st22=pd.read_csv(file_dict['ext_st22'],sep='\\t')\n",
     "seed_dict['ext_st22']=(set(ext_st22['GENE NAME']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "0039cbaf-c2da-43f1-8301-f283cd08645c",
+   "execution_count": 29,
+   "id": "ccdaf489-ae86-4cb5-a722-e14572c338b0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.7003672499459928e-06"
+       "1.5538e-08"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "0.05/len(ext)"
+    "max(ext[ext.P<1.556900e-08].P)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "dc747248-4699-4afe-a4bd-b2fd38abe7a2",
+   "execution_count": null,
+   "id": "96dc5cdd-ffa0-4981-8d8e-2919bf108961",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.013663"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "min(ext[ext['Q']>0.05]['P'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "6cd81490-a43b-4cab-97e7-0f0828be30b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0011128"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "max(loco[loco['Q']<0.05]['P'])"
+    "# run straight propagation- no sampling"
    ]
   },
   {
@@ -466,6 +482,7 @@
     }
    ],
    "source": [
+    "#loop for all seed genes\n",
     "for k in seed_dict.keys():  \n",
     "    seed_genes = list(seed_dict[k].intersection(graph.nodes()))\n",
     "    \n",
@@ -480,6 +497,58 @@
     "    if save_file:\n",
     "        print(('network_scores/'+k+'_'+interactome_name+'_zscore.tsv'))\n",
     "        NPSc.to_csv('network_scores/'+k+'_'+interactome_name+'_zscore.tsv',sep='\\t',header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "bc61c68a-994f-4cff-8e71-48661bd3ea8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51289cc0e1bd460a929ec722e9dd8e07",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TGFBR1   -0.460691\n",
+      "TGFBR2   -0.468269\n",
+      "SMAD3    -0.270248\n",
+      "TGFB1     0.301496\n",
+      "SMAD2    -0.686415\n",
+      "dtype: float64\n",
+      "network_scores/ext_top500_PCNet2.0_zscore.tsv\n"
+     ]
+    }
+   ],
+   "source": [
+    "#run for an individual seed gene set\n",
+    "k='ext_top500' \n",
+    "seed_genes = list(seed_dict[k].intersection(graph.nodes()))\n",
+    "\n",
+    "NPSc, Fnew_score, Fnew_rand_score = netprop_zscore.calculate_heat_zscores(\n",
+    "    w_double_prime,  \n",
+    "    list(graph.nodes()),\n",
+    "    dict(graph.degree), \n",
+    "    seed_genes, num_reps=1000,\n",
+    "    minimum_bin_size=100,\n",
+    "    random_seed=random_seed)\n",
+    "print(NPSc.head())\n",
+    "if save_file:\n",
+    "    print(('network_scores/'+k+'_'+interactome_name+'_zscore.tsv'))\n",
+    "    NPSc.to_csv('network_scores/'+k+'_'+interactome_name+'_zscore.tsv',sep='\\t',header=False)"
    ]
   }
  ],
