--- a/run_magma_rat.ipynb
+++ b/run_magma_rat.ipynb
@@ -661,7 +661,9 @@
    "cell_type": "code",
    "execution_count": 61,
    "id": "59c77166-1caf-4470-9c96-babd4ba908e9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1533,6 +1535,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "39577f4e-7518-434b-96af-fc5103ef9086",
+   "metadata": {},
+   "source": [
+    "so fun fact- the N that Apurva told me to use use is the number of rats genotyped, not the number of rats that were phenotyed, because Hao Chen's data was removed. SO EVERYTHING IS A LITTLE WRONG....\n",
+    "I'll rerun using the correct N just for the 10kb window, and see if it makes any real difference. If it does I guess I can rerun it but I really don't think it's worth the computing power unless it's being included in the manuscript"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "391415e3-a208-4296-a5f2-b148ed8282bd",
@@ -1546,7 +1557,7 @@
     "win_ls=( 0 1 5 10 25 50)\n",
     "prefix=\"loco_meta\"\n",
     "gene_loc_file=\"rn7.2_annotatedgenes_ncbi/rn7.2_gene_attribute_table_protein_coding_forMAGMA.tsv\"\n",
-    "N=8679\n",
+    "N=8679 # wrong N- this is the N genotyped\n",
     "rats=\"loco_meta_gwas_geno/genotypes\"\n",
     "suffix=\"\"\n",
     "\n",
@@ -1558,9 +1569,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "538ab572-94d7-44f2-843c-3bc224eefc7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#single run- just for 10kb window\n",
+    "\n",
+    "cd /tscc/projects/ps-palmer/brittany/SUD_cross_species/magma\n",
+    "\n",
+    "prefix=\"loco_meta\"\n",
+    "gene_loc_file=\"rn7.2_annotatedgenes_ncbi/rn7.2_gene_attribute_table_protein_coding_forMAGMA.tsv\"\n",
+    "N=7722 # this is the N phenotyed\n",
+    "rats=\"loco_meta_gwas_geno/genotypes\"\n",
+    "suffix=\"\"\n",
+    "\n",
+    "#win=${win_ls[$SLURM_ARRAY_TASK_ID-1]}\n",
+    "win=10\n",
+    "/tscc/projects/ps-palmer/brittany/magma_v1/magma --annotate nonhuman window=$win --snp-loc \"${prefix}_pos.tsv\" --gene-loc $gene_loc_file --out $prefix$suffix\"_7k_win\"$win\n",
+    "\n",
+    "/tscc/projects/ps-palmer/brittany/magma_v1/magma --bfile $rats --pval \"${prefix}_pval.tsv\" N=$N --gene-annot \"${prefix}${suffix}\"_7k_win\"${win}.genes.annot\" --out $prefix$suffix\"_7k_win\"$win\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "979131fc-a002-4554-b0a0-a900d6f8f997",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## NICSA QTL traits and round 2 PCA"
    ]
